Latest usability and refactoring updates